js: also try out minify

--- a/js/hello/Makefile
+++ b/js/hello/Makefile
@@ -1,2 +1,7 @@
 bundle.js: main.js Makefile
+ifneq ($(DEBUG),)
 	browserify --debug -o bundle.js main.js
+else
+	browserify -o bundle.max.js main.js
+	minify -o bundle.js bundle.max.js
+endif
