--- a/js/szihkcal/Makefile
+++ b/js/szihkcal/Makefile
@@ -1,11 +1,13 @@
 -include config.mak
 
 bundle.js: main.js Makefile
-	eslint main.js
-	clang-format-check main.js
 ifneq ($(DEBUG),)
 	browserify --debug -o bundle.js main.js
 else
 	browserify -o bundle.max.js main.js
 	minify -o bundle.js bundle.max.js
 endif
+
+check:
+	eslint main.js
+	clang-format-check main.js
