js/typescript: add just discovered useful-looking compiler switches

--- a/js/typescript/Makefile
+++ b/js/typescript/Makefile
@@ -1,2 +1,10 @@
+# tsc --help|grep 'errors\? \(on\|when\)'|grep -v 'Do not'
+TSCFLAGS := \
+	   --noImplicitAny \
+	   --noImplicitReturns \
+	   --noImplicitThis \
+	   --noUnusedLocals \
+	   --noUnusedParameters \
+
 greet.js: greet.ts Makefile
-	tsc greet.ts
+	tsc $(TSCFLAGS) greet.ts
