gtktpconv: unit test is non-MSVC-only for now

--- a/gtktpconv/CMakeLists.txt
+++ b/gtktpconv/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(gtktpconv)
 cmake_minimum_required(VERSION 2.6)
+
+# Gtk external.
 if (UNIX)
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
@@ -21,22 +23,25 @@ include_directories(${CMAKE_SOURCE_DIR}/inc ${GTK3_INCLUDE_DIRS})
 link_directories(${GTK3_LIBRARY_DIRS})
 add_definitions(${GTK3_CFLAGS_OTHER})
 
+# tpconv library.
 add_library(tpconv source/lib.cxx)
 
+# tpconv Gtk UI.
 add_executable(gtktpconv source/main.cxx)
 target_link_libraries(gtktpconv tpconv ${GTK3_LIBRARIES})
 
-enable_testing()
-
-add_executable(testtpconv qa/test.cxx)
-target_link_libraries(testtpconv tpconv)
-add_test(tpconv testtpconv)
-
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
-add_dependencies(check testtpconv)
-
-# MSVC supports (a subset of) C++11 without any switches.
 if (NOT MSVC)
+    # tpconv unit test.
+    enable_testing()
+
+    add_executable(testtpconv qa/test.cxx)
+    target_link_libraries(testtpconv tpconv)
+    add_test(tpconv testtpconv)
+
+    add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
+    add_dependencies(check testtpconv)
+
+    # MSVC supports (a subset of) C++11 without any switches.
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
