nss: add string that should work
https://bugzilla.mozilla.org/show_bug.cgi?id=1342137

--- a/nss/Makefile
+++ b/nss/Makefile
@@ -2,4 +2,4 @@ NSS_CFLAGS := $(shell pkg-config --cflags nss)
 NSS_LIBS := $(shell pkg-config --libs nss)
 
 test: test.cpp Makefile
-	clang++ ${NSS_CFLAGS} -o test test.cpp ${NSS_LIBS}
+	clang++ -g ${NSS_CFLAGS} -o test test.cpp ${NSS_LIBS}
