nss: demo code to show how the result is not valid asn1

--- a/nss/Makefile
+++ b/nss/Makefile
@@ -9,7 +9,7 @@ test: test.cpp Makefile
 	clang++ -g ${NSS_CFLAGS} -o test test.cpp ${NSS_LIBS}
 
 test-local: test.cpp Makefile
-	clang++ ${NSS_CFLAGS_LOCAL} -o test test.cpp ${NSS_LIBS_LOCAL}
+	clang++ -std=c++11 -g ${NSS_CFLAGS_LOCAL} -o test test.cpp ${NSS_LIBS_LOCAL}
 
 run-local:
 	LD_LIBRARY_PATH=${WORKDIR}/dist/Linux4.4_x86_64_cc_glibc_PTH_64_DBG.OBJ/lib ./test
