--- a/gcontacts/Makefile
+++ b/gcontacts/Makefile
@@ -1,3 +1,3 @@
 check:
-	pep8 gcontacts
-	! pylint gcontacts 2>&1 | egrep -i 'unused|indent'
+	pep8 gcontacts lcontacts
+	! pylint lcontacts 2>&1 | egrep -i 'unused|indent'
