llvm: find-harmful-auto is moved to ...
... <https://cgit.freedesktop.org/libreoffice/contrib/dev-tools/tree/clang/find-harmful-auto.cxx>

--- a/llvm/libtoling/Makefile
+++ b/llvm/libtoling/Makefile
@@ -3,12 +3,9 @@ CLANGWARNS=-Werror -Wall -Wno-missing-braces -Wnon-virtual-dtor -Wendif-labels -
 CLANGFLAGS = $(CLANGDEFS) $(CLANGWARNS) -g -std=c++11
 CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lLLVMSupport
 
-all: bin/find-nonconst-methods bin/find-harmful-auto
+all: bin/find-nonconst-methods
 
 bin/find-nonconst-methods: find-nonconst-methods.cxx Makefile
-	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
-
-bin/find-harmful-auto: find-harmful-auto.cxx Makefile
 	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
 
 run:
