llvm: add ast matcher PoC

--- a/llvm/libtooling/Makefile
+++ b/llvm/libtooling/Makefile
@@ -1,14 +1,14 @@
 CLANGDEFS=-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti
 CLANGWARNS=-Werror -Wall -Wno-missing-braces -Wnon-virtual-dtor -Wendif-labels -Wextra -Wundef -Wunused-macros -Wshadow -Woverloaded-virtual
 CLANGFLAGS = $(CLANGDEFS) $(CLANGWARNS) -g -std=c++11
-CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lLLVMSupport
+CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangASTMatchers -lLLVMSupport
 
-all: bin/find-nonconst-methods
+all: bin/find-nonconst-methods bin/readability-avoid-auto
 
 bin/find-nonconst-methods: find-nonconst-methods.cxx Makefile
 	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
 
-run:
-	bin/find-nonconst-methods test.cxx -- -std=c++11
+bin/readability-avoid-auto: readability-avoid-auto.cxx Makefile
+	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
 
 # vim: set noet sw=4 ts=4:
