--- a/llvm/libtooling/Makefile
+++ b/llvm/libtooling/Makefile
@@ -1,7 +1,7 @@
 CLANGDEFS=-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti
 CLANGWARNS=-Werror -Wall -Wno-missing-braces -Wnon-virtual-dtor -Wendif-labels -Wextra -Wundef -Wunused-macros -Wshadow -Woverloaded-virtual
 CLANGFLAGS = $(CLANGDEFS) $(CLANGWARNS) -g -std=c++11
-CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangASTMatchers -lLLVMSupport
+CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangToolingCore -lclangASTMatchers -lLLVMSupport
 
 all: bin/find-nonconst-methods bin/readability-avoid-auto
 
@@ -10,5 +10,10 @@ bin/find-nonconst-methods: find-nonconst-methods.cxx Makefile
 
 bin/readability-avoid-auto: readability-avoid-auto.cxx Makefile
 	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
+
+demo:
+	mkdir -p clang
+	bin/readability-avoid-auto -export-fixes=clang/fixes.yaml qa/readability-avoid-auto.cxx -- -std=c++11
+	clang-apply-replacements -remove-change-desc-files clang/
 
 # vim: set noet sw=4 ts=4:
