iwyu filter: refactor, end of blacklist is now just a data table

--- a/libreoffice/Makefile
+++ b/libreoffice/Makefile
@@ -6,6 +6,7 @@ REGRESSIONS_BLAME_NAME_URL = https://bugs.documentfoundation.org/buglist.cgi?f1=
 
 PYTHON_FILES = \
 	       find-unneeded-includes \
+	       find-unneeded-includes2 \
 	       find-unsorted-includes \
 	       includetools.py \
 	       qa/empty-atom.py
