update xmlsec status

--- a/xmlsec/Makefile
+++ b/xmlsec/Makefile
@@ -1,3 +1,6 @@
 check:
 	pep8 ./diff-backend
 	./diff-backend mscrypto-dsig-status.txt mscng-dsig-status.txt
+
+check-keys:
+	./diff-backend mscrypto-keys-status.txt mscng-keys-status.txt
