osm: addr-interpolation / martonhegy finder

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -26,6 +26,7 @@ update-addr-interpolation: addr-interpolation.txt workdir/street-housenumbers-ga
 	./overpass-query workdir/addr-interpolation-gazdagret.txt > workdir/addr-interpolation-gazdagret.csv
 	./overpass-query workdir/addr-interpolation-sashegy.txt > workdir/addr-interpolation-sashegy.csv
 	./overpass-query workdir/addr-interpolation-nemetvolgy.txt > workdir/addr-interpolation-nemetvolgy.csv
+	./overpass-query workdir/addr-interpolation-martonhegy.txt > workdir/addr-interpolation-martonhegy.csv
 	./overpass-query workdir/addr-interpolation-ormezo.txt > workdir/addr-interpolation-ormezo.csv
 
 # At the end this check found no problems, so this is not part of 'make check'.
@@ -54,6 +55,7 @@ check: check-style download
 	qa/interpolated-addresses.py -gazdagret
 	qa/interpolated-addresses.py -sashegy
 	qa/interpolated-addresses.py -nemetvolgy
+	qa/interpolated-addresses.py -martonhegy
 	qa/interpolated-addresses.py -ormezo
 	qa/streets-nomaxspeed.py
 	qa/suspicious-streets.py
@@ -84,6 +86,10 @@ workdir/addr-interpolation-nemetvolgy.txt: addr-interpolation.txt
 workdir/addr-interpolation-ormezo.txt: addr-interpolation.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713749/' addr-interpolation.txt > workdir/addr-interpolation-ormezo.txt
+
+workdir/addr-interpolation-martonhegy.txt: addr-interpolation.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3602787965/' addr-interpolation.txt > workdir/addr-interpolation-martonhegy.txt
 
 workdir/streets-sashegy.txt: streets.txt
 	@mkdir -p workdir
