xmlsec: compare full make check output when diffing backends

--- a/xmlsec/Makefile
+++ b/xmlsec/Makefile
@@ -1,6 +1,3 @@
 check:
 	pep8 ./diff-backend
-	./diff-backend mscrypto-dsig-status.txt mscng-dsig-status.txt
-
-check-keys:
-	./diff-backend mscrypto-keys-status.txt mscng-keys-status.txt
+	./diff-backend mscrypto-status.txt mscng-status.txt
