osm: ormezo house number filter skel

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -62,6 +62,7 @@ check: check-style download
 	qa/suspicious-streets.py -gazdagret
 	qa/suspicious-streets.py -sashegy
 	qa/suspicious-streets.py -nemetvolgy
+	#qa/suspicious-streets.py -ormezo
 
 workdir/streets-gazdagret.txt: streets.txt
 	@mkdir -p workdir
