--- a/llvm/libtooling/Makefile
+++ b/llvm/libtooling/Makefile
@@ -3,9 +3,12 @@ CLANGWARNS=-Werror -Wall -Wno-missing-braces -Wnon-virtual-dtor -Wendif-labels -
 CLANGFLAGS = $(CLANGDEFS) $(CLANGWARNS) -g -std=c++11
 CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangToolingCore -lclangASTMatchers -lLLVMSupport
 
-all: bin/readability-avoid-auto
+all: bin/readability-avoid-auto bin/bugprone-suspicious-xmlsec
 
 bin/readability-avoid-auto: readability-avoid-auto.cxx Makefile
+	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
+
+bin/bugprone-suspicious-xmlsec: bugprone-suspicious-xmlsec.cxx Makefile
 	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
 
 demo:
