osm: add qa/houseless-streets.py -balatonboglar test

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -7,6 +7,7 @@ update-streets: streets.txt workdir/streets-gazdagret.txt workdir/streets-sasheg
 	./overpass-query workdir/streets-nemetvolgy.txt > workdir/streets-nemetvolgy.csv
 	./overpass-query workdir/streets-martonhegy.txt > workdir/streets-martonhegy.csv
 	./overpass-query workdir/streets-ormezo.txt > workdir/streets-ormezo.csv
+	./overpass-query workdir/streets-balatonboglar.txt > workdir/streets-balatonboglar.csv
 
 update-streets-nomaxspeed: streets-nomaxspeed.txt
 	./overpass-query streets-nomaxspeed.txt > workdir/streets-nomaxspeed.csv
@@ -19,6 +20,7 @@ update-house-numbers: street-housenumbers.txt workdir/street-housenumbers-gazdag
 	./overpass-query workdir/street-housenumbers-nemetvolgy.txt > workdir/street-housenumbers-nemetvolgy.csv
 	./overpass-query workdir/street-housenumbers-martonhegy.txt > workdir/street-housenumbers-martonhegy.csv
 	./overpass-query workdir/street-housenumbers-ormezo.txt > workdir/street-housenumbers-ormezo.csv
+	./overpass-query workdir/street-housenumbers-balatonboglar.txt > workdir/street-housenumbers-balatonboglar.csv
 
 update-addr-interpolation: addr-interpolation.txt workdir/street-housenumbers-gazdagret.txt workdir/street-housenumbers-sashegy.txt
 	@mkdir -p workdir
@@ -51,6 +53,7 @@ check: check-style download
 	qa/houseless-streets.py -nemetvolgy
 	qa/houseless-streets.py -martonhegy
 	qa/houseless-streets.py -ormezo
+	#qa/houseless-streets.py -balatonboglar
 	qa/interpolated-addresses.py
 	qa/interpolated-addresses.py -gazdagret
 	qa/interpolated-addresses.py -sashegy
@@ -64,6 +67,10 @@ check: check-style download
 	qa/suspicious-streets.py -nemetvolgy
 	#qa/suspicious-streets.py -ormezo
 
+workdir/streets-balatonboglar.txt: streets.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3601367832/' streets.txt > workdir/streets-balatonboglar.txt
+
 workdir/streets-gazdagret.txt: streets.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713748/' streets.txt > workdir/streets-gazdagret.txt
@@ -71,6 +78,10 @@ workdir/streets-gazdagret.txt: streets.txt
 workdir/street-housenumbers-gazdagret.txt: street-housenumbers.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713748/' street-housenumbers.txt > workdir/street-housenumbers-gazdagret.txt
+
+workdir/street-housenumbers-balatonboglar.txt: street-housenumbers.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3601367832/' street-housenumbers.txt > workdir/street-housenumbers-balatonboglar.txt
 
 workdir/addr-interpolation-gazdagret.txt: addr-interpolation.txt
 	@mkdir -p workdir
